force-app/main/default/objects/sign_up_form__c/sign_up_form__c.object-meta.xml
<CustomObject>
    <label>sign up form</label>
    <nameField>
        <label>sinup form  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>sign up form</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>