force-app/main/default/objects/sign_up_form__c/fields/Conform_password__c.field-meta.xml
<CustomField>
    <fullName>Conform_password__c</fullName>
    <label>Conform password</label>
    <length>50</length>
    <type>Text</type>
</CustomField>