force-app/main/default/objects/sign_up_form__c/fields/show_password__c.field-meta.xml
<CustomField>
    <fullName>show_password__c</fullName>
    <defaultValue>false</defaultValue>
    <label>show password</label>
    <type>Checkbox</type>
</CustomField>