force-app/main/default/objects/sign_up_form__c/validationRules/confirm_password_validation.validationRule-meta.xml
<ValidationRule>
    <fullName>confirm_password_validation</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(REGEX(  Conform_password__c   , &quot;((?=.*\\d)(?=.*[a-z])(?=.*[A-Z])(?=.*[@#$%]).{6,20})&quot;))</errorConditionFormula>
    <errorDisplayField>Conform_password__c</errorDisplayField>
    <errorMessage>it should match with password</errorMessage>
</ValidationRule>