force-app/main/default/objects/sign_up_form__c/validationRules/email_validation_rule_1.validationRule-meta.xml
<ValidationRule>
    <fullName>email_validation_rule_1</fullName>
    <active>true</active>
    <errorConditionFormula>NOT (REGEX( email__c ,&quot;[a-zA-Z0-9\\.\\-]+[@][a-z]+\\.[a-z]+&quot;))</errorConditionFormula>
    <errorDisplayField>email__c</errorDisplayField>
    <errorMessage>enter proper email format</errorMessage>
</ValidationRule>