force-app/main/default/objects/sign_up_form__c/validationRules/email_validation_rule_2.validationRule-meta.xml
<ValidationRule>
    <fullName>email_validation_rule_2</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK( email__c )</errorConditionFormula>
    <errorDisplayField>email__c</errorDisplayField>
    <errorMessage>email cant be left blank</errorMessage>
</ValidationRule>