force-app/main/default/objects/sign_up_form__c/validationRules/first_name_validation_2.validationRule-meta.xml
<ValidationRule>
    <fullName>first_name_validation_2</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK( First_name__c )</errorConditionFormula>
    <errorDisplayField>First_name__c</errorDisplayField>
    <errorMessage>field cant be left blank</errorMessage>
</ValidationRule>