force-app/main/default/objects/sign_up_form__c/validationRules/first_name_validation_3.validationRule-meta.xml
<ValidationRule>
    <fullName>first_name_validation_3</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(REGEX( First_name__c ,&quot;[a-zA-Z]+&quot;))</errorConditionFormula>
    <errorDisplayField>First_name__c</errorDisplayField>
    <errorMessage>special characters are not allowed</errorMessage>
</ValidationRule>