force-app/main/default/objects/sign_up_form__c/validationRules/first_name_validation_form.validationRule-meta.xml
<ValidationRule>
    <fullName>first_name_validation_form</fullName>
    <active>true</active>
    <errorConditionFormula>ISNUMBER(First_name__c)</errorConditionFormula>
    <errorDisplayField>First_name__c</errorDisplayField>
    <errorMessage>number is not allowed</errorMessage>
</ValidationRule>