force-app/main/default/objects/sign_up_form__c/validationRules/last_name_validation_1.validationRule-meta.xml
<ValidationRule>
    <fullName>last_name_validation_1</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK( Last_name__c )</errorConditionFormula>
    <errorDisplayField>Last_name__c</errorDisplayField>
    <errorMessage>field cant be left blank</errorMessage>
</ValidationRule>