force-app/main/default/objects/sign_up_form__c/validationRules/last_name_validation_2.validationRule-meta.xml
<ValidationRule>
    <fullName>last_name_validation_2</fullName>
    <active>true</active>
    <errorConditionFormula>ISNUMBER( Last_name__c )</errorConditionFormula>
    <errorDisplayField>Last_name__c</errorDisplayField>
    <errorMessage>numbers are not allowed</errorMessage>
</ValidationRule>