force-app/main/default/objects/sign_up_form__c/validationRules/last_name_validation_3.validationRule-meta.xml
<ValidationRule>
    <fullName>last_name_validation_3</fullName>
    <active>true</active>
    <errorConditionFormula>NOT (REGEX( Last_name__c ,&quot;[a-zA-Z]+&quot;))</errorConditionFormula>
    <errorDisplayField>Last_name__c</errorDisplayField>
    <errorMessage>special characters are not allowed</errorMessage>
</ValidationRule>