force-app/main/default/objects/sign_up_form__c/validationRules/password_validation_rule2.validationRule-meta.xml
<ValidationRule>
    <fullName>password_validation_rule2</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(REGEX(  password__c  , &quot;((?=.*\\d)(?=.*[a-z])(?=.*[A-Z])(?=.*[@#$%]).{6,20})&quot;))</errorConditionFormula>
    <errorDisplayField>password__c</errorDisplayField>
    <errorMessage>atleast one lowercase , uppercase, special chararcter is required</errorMessage>
</ValidationRule>