force-app/main/default/objects/sign_up_form__c/validationRules/password_validation_rule_1.validationRule-meta.xml
<ValidationRule>
    <fullName>password_validation_rule_1</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK( password__c )</errorConditionFormula>
    <errorDisplayField>password__c</errorDisplayField>
    <errorMessage>password should not be left blank</errorMessage>
</ValidationRule>